--- a/gui/css/vestec.css
+++ b/gui/css/vestec.css
@@ -3,11 +3,30 @@ body {
 }
 
 .row {
-width:  100%;
-height: 100%;
+	width:  100%;
+	height: 100%;
 }
 
 .ui-resizable-helper { border: 2px dotted rgb(57, 57, 58); }
+
+.vestec-info
+{
+	width: 100%;
+	height: 10%;
+}
+
+.vestec-main
+{
+	width: 100%;
+	height: 90%;
+}
+
+
+.vestec-ui
+{
+	width: 100%;
+	height: 100%;
+}
 
 .resizeable
 {
