--- a/gui/css/vestec.css
+++ b/gui/css/vestec.css
@@ -1,73 +1,430 @@
 body {
-  background-color: transparent
-}
-
-.row {
-	width:  100%;
-	height: 100%;
-}
-
-.ui-resizable-helper { border: 2px dotted rgb(57, 57, 58); }
-
-.vestec-info
-{
-	width: 100%;
-	height: 10%;
-}
-
-.vestec-main
-{
-	width: 100%;
-	height: 90%;
-}
-
-
-.vestec-ui
-{
-	width: 100%;
-	height: 100%;
-}
-
-.resizeable
-{
-  width:  500px;
-  height: 500px;
-  opacity: 0.7;
-  padding-left: 0px;
-  padding-right: 0px;
-  padding-top: 0px;
-  padding-bottom: 0px;
-  background-color: #2727275d;
-  border-style: ridge;
-  border-width: 2px;
-}
-
-.button-collapse {
-	width:  100%;
+	background-color: transparent;
+  }
+  
+  .modal-content {
+	background-color: gray;
+  }
+  
+  .text {
+	color: #ddf;
+  }
+  
+  .row {
+  width:  100%;
   height: 100%;
-	float:right;
-	margin-right: -7px;
-	background-color: #ddf;
-	border-style: ridge;
-	border-width: 2px;
-	border-color: gray;
-	writing-mode: vertical-rl;
-	text-align: center;
-	font-size: 40px;
-	font-family: "Impact", Charcoal, sans-serif;
+  }
+  
+  .ui-resizable-helper { border: 2px dotted rgb(57, 57, 58); }
+  .ui-resizable-se {background-color: #ddf;}
+  .resizeable
+  {
+	top: 50px;
+	left: 100px;
+	width:  1300px;
+	height: 900px;
 	opacity: 0.7;
-}
-
-.vestec-info {
-	background-color: #ddf;
-	border-style: ridge;
-	border-width: 2px;
-	border-color: gray;
+	border-width: 1px;
+	border-style: solid;
+	border-color:  #ddf;
+	background-color: #2727275d;
+	border-radius: 20px;
+  }
+  
+  .datepicker table tr th, .datepicker table tr td {
 	text-align: center;
+	padding: 1px; 
+  }
+  
+  .datepicker .year, .datepicker .decade, .datepicker .century, .datepicker .month {
+	width: 25%;
+	padding: 0px;
+	display: inline-block;
+  }
+  
+  .datepicker .day, .datepicker .month, .datepicker .year, .datepicker .decade, .datepicker .century {
+	font-weight: bold;
+	color: #ddf;
+  }
+  
+  .button-collapse {
+	  width:  100%;
+	height: 100%;
+	  float:right;
+	  margin-right: -7px;
+	  background-color: #ddf;
+	  border-style: ridge;
+	  border-width: 2px;
+	  border-color: gray;
+	  writing-mode: vertical-rl;
+	  text-align: center;
+	  font-size: 40px;
+	  font-family: "Impact", Charcoal, sans-serif;
+	  opacity: 0.7;
+  }
+  
+  .vestec-info {
+	background-color: #ddf;
+	border-top-left-radius: 15px;
+	border-top-right-radius: 15px;
+	  text-align: center;
 	font-size: 20px;
-	font-family: "Impact", Charcoal, sans-serif;
-  opacity: 1.0;
-  height: 35px;
-  width: 100%;
-  z-index: 10000;
-}
+	font-weight: bold;
+	  font-family: "Impact", Charcoal, sans-serif;
+	opacity: 1.0;
+	height: 35px;
+	width: 100%;
+	z-index: 6;
+  }
+  
+  .minimize
+  {
+	position: absolute;
+	right: 10px;
+	top: 5px;
+	z-index: 3;
+  }
+  
+  .side-bar {
+	  float:right;
+	  border-style: ridge;
+	  border-width: 2px;
+	  border-color: gray;
+	  overflow: hidden;
+  }
+  
+  .node-editor {
+	background-size: 20px 20px;
+	background-image: linear-gradient(to right, #363636 1px, transparent 1px), linear-gradient(to bottom, #363636 1px, transparent 1px);
+	background-color: #2727275d;
+	border-radius: 20px;
+	height: 96% !important;
+	width: 100% !important;
+	overflow: hidden;
+  }
+  
+  .node-editor-container {
+	padding: 0 0 !important;
+  }
+  
+  .node-editor * {
+	-webkit-box-sizing: border-box;
+			box-sizing: border-box;
+	list-style-type: none;
+  }
+  
+  .node-editor .node {
+	background: rgba(35, 35, 35, 0.7);
+	-webkit-box-shadow: 1px solid black;
+			box-shadow: 1px solid black;
+	border: 1px solid black;
+	border-radius: 10px;
+	cursor: pointer;
+	display: inline-block;
+	height: auto;
+	padding-bottom: 6px;
+	-webkit-box-sizing: content-box;
+			box-sizing: content-box;
+	position: absolute;
+	-webkit-box-shadow: 4px 5px 9px rgba(0, 0, 0, 0.5);
+			box-shadow: 4px 5px 9px rgba(0, 0, 0, 0.5);
+  }
+  
+  .node-editor .node .collapsible-header {
+	background: gray;
+	font-size: 1.2rem;
+	line-height: 1.5rem;
+  }
+  
+  .node-editor .node span {
+	color: #ddf;
+	font-size: 1.0rem;
+  }
+  
+  .node-editor .s6 {
+	font-size: 1.0rem;
+  }
+  
+  .node-editor label {
+	font-size: 1.0rem;
+  }
+  
+  .node-editor .form-control {
+	font-size: 1.0rem !important;
+	width: 200px;
+	height: 25px !important;
+  }
+  
+  .node-editor .text-input {
+	width: 200px;
+	font-size: 1.0rem;
+  }
+  
+  .node-editor .node .smallnumber {
+	width: 45px;
+	height: 20px;
+	border-width: 2px;
+	border-style: inset;
+	border-color: #ccf
+  }
+  
+  .node-editor .node .title {
+	border-top: 1px solid #ccc;
+	color: rgb(41, 33, 33);
+	text-align: center;
+	font-weight: bold;
+	font-family: sans-serif;
+	font-size: 18px;
+	border-radius: 10px 10px 0 0;
+	padding: 8px;
+	overflow: hidden;
+	background: -webkit-gradient(linear, left bottom, left top, from(rgba(255, 255, 255, 0.05)), color-stop(40%, rgba(255, 255, 255, 0.05)), to(rgba(255, 255, 255, 0.19))), radial-gradient(70% 40px at center, #ddf 0%, #ddf 60%);
+	background: linear-gradient(to top, rgba(255, 255, 255, 0.05) 0%, rgba(255, 255, 255, 0.05) 40%, rgba(255, 255, 255, 0.19) 100%), radial-gradient(70% 40px at center,rgb(162, 162, 172) 0%,#ddf 60%);
+  }
+  .node-editor .node content {
+	display: table;
+	width: 100%;
+  }
+  .node-editor .node content column {
+	display: table-cell;
+	white-space: nowrap;
+  }
+  .node-editor .node content column:not(:last-child) {
+	padding-right: 20px;
+  }
+  .node-editor .node .socket {
+	display: inline-block;
+	cursor: pointer;
+	border: 2px solid #ddf;
+	border-radius: 8px;
+	width: 16px;
+	height: 16px;
+	margin: 10px;
+	vertical-align: middle;
+	background: transparent;
+	position: relative;
+	z-index: 2;
+  }
+  
+  .node-editor .node .socket.used {
+	background: ddf;
+  }
+  .node-editor .node .socket:after {
+	content: "";
+	position: absolute;
+	width: 0;
+	height: 0;
+	top: 3px;
+	left: 16px;
+	display: inline-block;
+	border-style: solid;
+	border-width: 4px 0 4px 2.6666666667px;
+	border-color: transparent transparent transparent white;
+  }
+  .node-editor .node .socket:hover {
+	border-color: rgb(209, 24, 39);
+  }
+  .node-editor .node .socket.multiple {
+	border-color: rgb(14, 14, 13);
+  }
+  .node-editor .node .input-title, .node-editor .node .output-title {
+	vertical-align: middle;
+	color: #ddf;
+	display: inline-block;
+	font-family: sans-serif;
+	font-size: 14px;
+	margin: 10px 0;
+	line-height: 16px;
+  }
+  .node-editor .node .input-control {
+	z-index: 1;
+	vertical-align: middle;
+	display: inline-block;
+  }
+  .node-editor .node .control {
+	width: 100%;
+	padding: 10px 18px;
+  }
+  .node-editor .group {
+	border-radius: 16px;
+	background: rgba(15, 80, 255, 0.2);
+	cursor: pointer;
+	width: inherit;
+	height: inherit;
+	border: 6px solid transparent;
+	position: absolute;
+  }
+  .node-editor .group.active {
+	border-color: #ddf;
+  }
+  .node-editor .group .group-title {
+	color: #ddf;
+	font-family: sans-serif;
+	font-size: 18px;
+	padding: 12px;
+  }
+  .node-editor .group .group-handler {
+	background: transparent;
+	width: 40px;
+	height: 40px;
+	position: absolute;
+  }
+  .node-editor .group .group-handler.right.bottom {
+	cursor: se-resize;
+	right: -10px;
+	bottom: -10px;
+  }
+  .node-editor .group .group-handler.left.top {
+	cursor: nw-resize;
+	left: -10px;
+	top: -10px;
+  }
+  .node-editor .group .group-handler.right.top {
+	cursor: ne-resize;
+	right: -10px;
+	top: -10px;
+  }
+  .node-editor .group .group-handler.left.bottom {
+	cursor: sw-resize;
+	left: -10px;
+	bottom: -10px;
+  }
+  .node-editor .connections {
+	position: absolute;
+	overflow: visible;
+	pointer-events: none;
+  }
+  .node-editor .connections .connection {
+	fill: none;
+	stroke: #ddf;
+	stroke-width: 3px;
+	pointer-events: none;
+  }
+  .node-editor .connections .connection.active {
+	stroke: #ddf;
+  }
+  .node-editor select, .node-editor input {
+	background-color: transparent;
+	/* padding: 2px 6px;
+	border: 1px solid white; */
+	font-size: 14px;
+	color: #ddf;
+  }
+  
+  .context-menu {
+	left: 0;
+	top: 0;
+	width: 120px;
+	position: absolute;
+	padding: 10px;
+	margin-top: -20px;
+  }
+  .context-menu > .item {
+	margin-left: -80%;
+  }
+  .context-menu > .item .subitems {
+	position: absolute;
+	display: none;
+	left: 100%;
+	top: 0;
+	border-radius: 7px;
+	overflow: overlay;
+  }
+  .context-menu > .item:hover .subitems {
+	display: block;
+  }
+  .context-menu > .item.have-subitems {
+	padding-right: 16px;
+  }
+  .context-menu > .item.have-subitems:after {
+	content: "►";
+	position: absolute;
+	opacity: 0.6;
+	right: 5px;
+	top: 5px;
+  }
+  .context-menu .item {
+	padding: 4px;
+	border-bottom: 1px solid rgba(15, 15, 15, 0.7);
+	color: #ddf;
+	background-color: rgba(35, 35, 35, 0.7);
+	cursor: pointer;
+	position: relative;
+  }
+  .context-menu .item:first-child {
+	border-radius: 7px 7px 0 0;
+  }
+  .context-menu .item:last-child {
+	border-radius: 0 0 7px 7px;
+  }
+  .context-menu .item:hover {
+	background-color: rgba(45, 45, 45, 0.7);
+  }
+  
+  /* Dropdowns ---------------------------------------------------------------- */
+  
+  .bootstrap-select:not([class*=col-]):not([class*=form-control]):not(.input-group-btn) {
+	width: 100%;
+  }
+  
+  .btn-light:not(:disabled):not(.disabled).active, .btn-light:not(:disabled):not(.disabled):active, .show>.btn-light.dropdown-toggle {
+	background-color: transparent;
+	color: #ddf;
+	text-shadow: 0 0 3px rgba(255, 255, 255, 0.4), 0 0 10px rgba(255, 255, 255, 0.4) !important;
+  }
+  
+  .dropdown-toggle {
+	background: transparent;
+	color: #ccf;
+	border: none;
+	border-bottom: 2px solid #ccf;
+  }
+  
+  .dropdown-toggle.show {
+	background-color: transparent !important;
+	color: #ddf !important;
+	text-shadow: 0 0 3px rgba(255, 255, 255, 0.4), 0 0 10px rgba(255, 255, 255, 0.4) !important;
+  }
+  
+  .show>.btn-light.dropdown-toggle:focus,
+  .dropdown-toggle:hover {
+	color: #ddf;
+	text-shadow: 0 0 3px rgba(255, 255, 255, 0.4), 0 0 10px rgba(255, 255, 255, 0.4);
+	background: transparent;
+	box-shadow: none;
+  }
+  
+  .dropdown-menu {
+	background: black;
+	border: 1px solid #ccf
+  }
+  
+  .dropdown-item,
+  .dropdown-option {
+	background: black;
+	color: #ccf;
+  }
+  
+  .dropdown-item:hover,
+  .dropdown-item:focus,
+  .dropdown-option:focus,
+  .dropdown-option:hover {
+	background: black;
+	color: #ccf;
+	text-shadow: 0 0 3px rgba(255, 255, 255, 0.4), 0 0 10px rgba(255, 255, 255, 0.4);
+	outline: none;
+  }
+  
+  .bootstrap-select .dropdown-toggle:focus, .bootstrap-select>select.mobile-device:focus+.dropdown-toggle {
+	outline: none !important;
+	box-shadow: none;
+  }
+  
+  .dropdown-item.active,
+  .dropdown-option:active {
+	background-color: black;
+	text-shadow: 0 0 3px rgba(255, 255, 255, 0.4), 0 0 10px rgba(255, 255, 255, 0.4);
+	color: #ddf;
+  }
+  
+  
