--- a/gui/css/vestec.css
+++ b/gui/css/vestec.css
@@ -1,47 +1,35 @@
-body {
-    background-color: transparent;
+#csp-vestec-node-editor .window-wrapper {
+    width: 775px;
+    height: 450px;
 }
 
-.bootstrap-select .dropdown-menu li a span.text {
+#csp-vestec-node-editor .bootstrap-select .dropdown-menu li a span.text {
     display: inline-block;
-    color: #ddf;
+    color: var(--cs-color-text);
 }
 
-.modal-content {
-    background-color: gray;
+#csp-vestec-node-editor .modal-content {
+    background-color: var(--cs-color-background-light);
 }
 
-.text {
-    color: #ddf;
+#csp-vestec-node-editor .text {
+    color: var(--cs-color-text);
 }
 
-.dark-text {
+#csp-vestec-node-editor .dark-text {
     color: rgb(0, 0, 0);
 }
 
-.ui-resizable-helper {
-    border: 2px dotted rgb(57, 57, 58);
+#csp-vestec-node-editor #vestec-tabs {
+    border-bottom: 0;
 }
 
-.ui-resizable-se {
-    background-color: rgb(169, 169, 182);
-    opacity: 0.2;
+#csp-vestec-node-editor #vestec-tabs .nav-item {
+    padding: 6px 4px 2px 4px;
+    margin: 0 10px;
 }
 
-.resizeable {
-    top: 50px;
-    left: 100px;
-    width: 1300px;
-    height: 900px;
-    opacity: 1;
-    border-width: 1px;
-    border-style: solid;
-    border-color: #ddf;
-    background-color: #2727275d;
-    border-radius: 20px;
-}
-
-.vestec-container {
+#csp-vestec-node-editor .vestec-container {
     padding: 0 0 !important;
     height: 100%;
     width: 100%;
@@ -49,14 +37,16 @@ body {
     flex-direction: column;
 }
 
-.vestec-tabs {
-    margin: 0px !important;
+#csp-vestec-node-editor .vestec-tabs {
+    margin: 0 !important;
     flex-grow: 1;
     position: relative;
+    width: 100%;
+    height: 100%;
 }
 
-.vestec-tab-content {
-    margin: 0px;
+#csp-vestec-node-editor .vestec-tab-content {
+    margin: 0;
     padding: 2px;
     position: absolute;
     left: 0;
@@ -65,12 +55,12 @@ body {
     top: 0;
 }
 
-.vestec-tab-content.active {
-    z-index: 1;
+#csp-vestec-node-editor .vestec-tab-content.active {
+    z-index: 111;
 }
 
-.vestec-info {
-    background-color: #ddf;
+#csp-vestec-node-editor .vestec-info {
+    background-color: var(--cs-color-text);
     border-top-left-radius: 15px;
     border-top-right-radius: 15px;
     text-align: center;
@@ -80,10 +70,10 @@ body {
     opacity: 1.0;
     height: 35px;
     width: 100%;
-    z-index: 2;
+    z-index: 112;
 }
 
-.vestec-portal {
+#csp-vestec-node-editor .vestec-portal {
     background-color: rgb(229, 229, 240);
     opacity: 1.0;
     padding: 0 0 !important;
@@ -93,28 +83,36 @@ body {
     border-bottom-right-radius: 15px;
 }
 
-.datepicker table tr th, .datepicker table tr td {
+#csp-vestec-node-editor .datepicker table tr th,
+#csp-vestec-node-editor .datepicker table tr td {
     text-align: center;
     padding: 1px;
 }
 
-.datepicker .year, .datepicker .decade, .datepicker .century, .datepicker .month {
+#csp-vestec-node-editor .datepicker .year,
+#csp-vestec-node-editor .datepicker .decade,
+#csp-vestec-node-editor .datepicker .century,
+#csp-vestec-node-editor .datepicker .month {
     width: 25%;
-    padding: 0px;
+    padding: 0;
     display: inline-block;
 }
 
-.datepicker .day, .datepicker .month, .datepicker .year, .datepicker .decade, .datepicker .century {
+#csp-vestec-node-editor .datepicker .day,
+#csp-vestec-node-editor .datepicker .month,
+#csp-vestec-node-editor .datepicker .year,
+#csp-vestec-node-editor .datepicker .decade,
+#csp-vestec-node-editor .datepicker .century {
     font-weight: bold;
-    color: #ddf;
+    color: var(--cs-color-text);
 }
 
-.button-collapse {
+#csp-vestec-node-editor .button-collapse {
     width: 100%;
     height: 100%;
     float: right;
     margin-right: -7px;
-    background-color: #ddf;
+    background-color: var(--cs-color-text);
     border-style: ridge;
     border-width: 2px;
     border-color: gray;
@@ -125,14 +123,7 @@ body {
     opacity: 0.9;
 }
 
-.minimize {
-    position: absolute;
-    right: 10px;
-    top: 5px;
-    z-index: 3;
-}
-
-.side-bar {
+#csp-vestec-node-editor .side-bar {
     float: right;
     border-style: ridge;
     border-width: 2px;
@@ -210,7 +201,7 @@ body {
     height: 20px;
     border-width: 2px;
     border-style: inset;
-    border-color: #ccf
+    border-color: var(--cs-color-primary)
 }
 
 .node-editor .node .title {
@@ -223,8 +214,8 @@ body {
     border-radius: 10px 10px 0 0;
     padding: 8px;
     overflow: hidden;
-    background: -webkit-gradient(linear, left bottom, left top, from(rgba(255, 255, 255, 0.05)), color-stop(40%, rgba(255, 255, 255, 0.05)), to(rgba(255, 255, 255, 0.19))), radial-gradient(70% 40px at center, #ddf 0%, #ddf 60%);
-    background: linear-gradient(to top, rgba(255, 255, 255, 0.05) 0%, rgba(255, 255, 255, 0.05) 40%, rgba(255, 255, 255, 0.19) 100%), radial-gradient(70% 40px at center, rgb(162, 162, 172) 0%, #ddf 60%);
+    background: -webkit-gradient(linear, left bottom, left top, from(rgba(255, 255, 255, 0.05)), color-stop(40%, rgba(255, 255, 255, 0.05)), to(rgba(255, 255, 255, 0.19))), radial-gradient(70% 40px at center, var(--cs-color-text) 0%, var(--cs-color-text) 60%);
+    background: linear-gradient(to top, rgba(255, 255, 255, 0.05) 0%, rgba(255, 255, 255, 0.05) 40%, rgba(255, 255, 255, 0.19) 100%), radial-gradient(70% 40px at center, rgb(162, 162, 172) 0%, var(--cs-color-text) 60%);
 }
 
 .node-editor .node content {
@@ -244,7 +235,7 @@ body {
 .node-editor .node .socket {
     display: inline-block;
     cursor: pointer;
-    border: 2px solid #ddf;
+    border: 2px solid var(--cs-color-text);
     border-radius: 8px;
     width: 16px;
     height: 16px;
@@ -256,7 +247,7 @@ body {
 }
 
 .node-editor .node .socket.used {
-    background: ddf;
+    background: var(--cs-color-text);
 }
 
 .node-editor .node .socket:after {
@@ -282,7 +273,7 @@ body {
 
 .node-editor .node .input-title, .node-editor .node .output-title {
     vertical-align: middle;
-    color: #ddf;
+    color: var(--cs-color-text);
     display: inline-block;
     font-family: sans-serif;
     font-size: 14px;
@@ -312,11 +303,11 @@ body {
 }
 
 .node-editor .group.active {
-    border-color: #ddf;
+    border-color: var(--cs-color-text);
 }
 
 .node-editor .group .group-title {
-    color: #ddf;
+    color: var(--cs-color-text);
     font-family: sans-serif;
     font-size: 18px;
     padding: 12px;
@@ -361,21 +352,19 @@ body {
 
 .node-editor .connections .connection {
     fill: none;
-    stroke: #ddf;
+    stroke: var(--cs-color-text);
     stroke-width: 3px;
     pointer-events: none;
 }
 
 .node-editor .connections .connection.active {
-    stroke: #ddf;
+    stroke: var(--cs-color-text);
 }
 
 .node-editor select, .node-editor input {
     background-color: transparent;
-    /* padding: 2px 6px;
-    border: 1px solid white; */
     font-size: 14px;
-    color: #ddf;
+    color: var(--cs-color-text);
 }
 
 .context-menu {
@@ -385,7 +374,7 @@ body {
     position: absolute;
     padding: 10px;
     margin-top: -20px;
-    z-index: 4;
+    z-index: 114;
 }
 
 .context-menu > .item {
@@ -420,7 +409,7 @@ body {
 .context-menu .item {
     padding: 4px;
     border-bottom: 1px solid rgba(15, 15, 15, 0.7);
-    color: #ddf;
+    color: var(--cs-color-text);
     background-color: rgba(35, 35, 35, 0.7);
     cursor: pointer;
     position: relative;
@@ -438,73 +427,78 @@ body {
     background-color: rgba(45, 45, 45, 0.7);
 }
 
-/* Dropdowns ---------------------------------------------------------------- */
-
-.bootstrap-select:not([class*=col-]):not([class*=form-control]):not(.input-group-btn) {
+.context-menu .item > input {
     width: 100%;
 }
 
-.btn-light:not(:disabled):not(.disabled).active, .btn-light:not(:disabled):not(.disabled):active, .show > .btn-light.dropdown-toggle {
+/* Dropdowns ---------------------------------------------------------------- */
+
+#csp-vestec-node-editor .bootstrap-select:not([class*=col-]):not([class*=form-control]):not(.input-group-btn) {
+    width: 100%;
+}
+
+#csp-vestec-node-editor .btn-light:not(:disabled):not(.disabled).active, .btn-light:not(:disabled):not(.disabled):active, .show > .btn-light.dropdown-toggle {
     background-color: transparent;
-    color: #ddf;
+    color: var(--cs-color-text);
     text-shadow: 0 0 3px rgba(255, 255, 255, 0.4), 0 0 10px rgba(255, 255, 255, 0.4) !important;
 }
 
-.dropdown-toggle {
+#csp-vestec-node-editor .dropdown-toggle {
     background: transparent;
-    color: #ccf;
+    color: var(--cs-color-primary);
     border: none;
-    border-bottom: 2px solid #ccf;
+    border-bottom: 2px solid var(--cs-color-primary);
 }
 
-.dropdown-toggle.show {
+#csp-vestec-node-editor .dropdown-toggle.show {
     background-color: transparent !important;
-    color: #ddf !important;
+    color: var(--cs-color-text) !important;
     text-shadow: 0 0 3px rgba(255, 255, 255, 0.4), 0 0 10px rgba(255, 255, 255, 0.4) !important;
 }
 
-.show > .btn-light.dropdown-toggle:focus,
-.dropdown-toggle:hover {
-    color: #ddf;
+#csp-vestec-node-editor .show > .btn-light.dropdown-toggle:focus,
+#csp-vestec-node-editor .dropdown-toggle:hover {
+    color: var(--cs-color-text);
     text-shadow: 0 0 3px rgba(255, 255, 255, 0.4), 0 0 10px rgba(255, 255, 255, 0.4);
     background: transparent;
     box-shadow: none;
 }
 
-.dropdown-menu {
-    background: black;
-    border: 1px solid #ccf
+#csp-vestec-node-editor .dropdown-menu {
+    background: var(--cs-color-background-darker);
+    border: 1px solid var(--cs-color-primary)
 }
 
-.dropdown-item,
-.dropdown-option {
-    background: black;
-    color: #ccf;
+#csp-vestec-node-editor .dropdown-item,
+#csp-vestec-node-editor .dropdown-option {
+    background: var(--cs-color-background-darker);
+    color: var(--cs-color-primary);
 }
 
-.dropdown-item:hover,
-.dropdown-item:focus,
-.dropdown-option:focus,
-.dropdown-option:hover {
-    background: black;
-    color: #ccf;
+#csp-vestec-node-editor .dropdown-item:hover,
+#csp-vestec-node-editor .dropdown-item:focus,
+#csp-vestec-node-editor .dropdown-option:focus,
+#csp-vestec-node-editor .dropdown-option:hover {
+    background: var(--cs-color-background-darker);
+    color: var(--cs-color-primary);
     text-shadow: 0 0 3px rgba(255, 255, 255, 0.4), 0 0 10px rgba(255, 255, 255, 0.4);
     outline: none;
 }
 
-.bootstrap-select .dropdown-toggle:focus, .bootstrap-select > select.mobile-device:focus + .dropdown-toggle {
+#csp-vestec-node-editor .bootstrap-select .dropdown-toggle:focus,
+#csp-vestec-node-editor .bootstrap-select > select.mobile-device:focus + .dropdown-toggle {
     outline: none !important;
     box-shadow: none;
 }
 
-.dropdown-item.active,
-.dropdown-option:active {
+#csp-vestec-node-editor .dropdown-item.active,
+#csp-vestec-node-editor .dropdown-option:active {
     background-color: black;
     text-shadow: 0 0 3px rgba(255, 255, 255, 0.4), 0 0 10px rgba(255, 255, 255, 0.4);
-    color: #ddf;
+    color: var(--cs-color-text);
 }
-  
-#floweditor-resizeable {
+
+#csp-vestec-node-editor #floweditor-resizeable {
     position: absolute;
     top: 100px;
     left: 100px;
