:sparkles: Allow to select multiple datasets
TODO: Currently only unique types can be output at the same time, e.g. no two textures, etc.

--- a/gui/css/vestec.css
+++ b/gui/css/vestec.css
@@ -381,6 +381,12 @@
     color: var(--cs-color-text);
 }
 
+.node-editor .dropdown li.selected a::before {
+    content: '\2713';
+    padding-right: 0.25rem;
+    font-size: 90%;
+}
+
 .node-editor .node .btn.glass {
     line-height: 1;
 }
